# curswork

./: .coverage  .gitignore  pyproject.toml
src/: app.py  reports.py  service.py  utils.py  views.py
tests/: test_reports.py  test_service.py  test_utils.py  test_views.py
