[project]
name = "curswork1"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim_ka",email = "miheevm332@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "app (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line-length = 119

[tool.mypy]
disallow_any_unimported = true
warn_return_any = true
exclude = 'venv'